[SPARK-45508][CORE] Add "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED" so Platform can access Cleaner on Java 9+
This PR adds `--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED` to our JVM flags so that we can access `jdk.internal.ref.Cleaner` in JDK 9+.

This allows Spark to allocate direct memory while ignoring the JVM's MaxDirectMemorySize limit. Spark uses JDK internal APIs to directly construct DirectByteBuffers while bypassing that limit, but there is a fallback path at https://github.com/apache/spark/blob/v3.5.0/common/unsafe/src/main/java/org/apache/spark/unsafe/Platform.java#L213 that is used if we cannot reflectively access the `Cleaner` API.

No.

Added a unit test in `PlatformUtilSuite`.

No.

Closes #43344 from JoshRosen/SPARK-45508.

Authored-by: Josh Rosen <joshrosen@databricks.com>
Signed-off-by: yangjie01 <yangjie01@baidu.com>
(cherry picked from commit 96bac6c033b5bb37101ebcd8436ab9a84db8e092)
Signed-off-by: Dongjoon Hyun <dhyun@apple.com>